# Project3

./: .env.example  .flake8  README.md  config.py  data_loader.py  db_creator.py  db_manager.py  hh_api.py  main.py  pyproject.toml  requirements.txt
